syntax = "proto3";

package user_module;

// 返回的响应格式
message StringDataResponse {
    int32 code = 1;
    string message = 2;
    string data = 3;
}

// 登陆的请求格式
message UserLoginRequest {
    string username = 1;
    string password = 2;
}

service UserService {
    rpc Login (UserLoginRequest) returns (StringDataResponse) {
    }
}
